<?xml version="1.0" encoding="utf-8"?><!--
  ~ /*
  ~  *
  ~  *  * ****************************************************************************
  ~  *  * Copyright (c) 2015. Muriel Kamgang Mabou
  ~  *  * All rights reserved.
  ~  *  *
  ~  *  * This file is part of project AndroidWPTemplate.
  ~  *  * It can not be copied and/or distributed without the
  ~  *  * express permission of Muriel Kamgang Mabou
  ~  *  * ****************************************************************************
  ~  *
  ~  *
  ~  */
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color_drawer"
    android:clipToPadding="false"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewNotification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/menu_margin"
                android:layout_marginLeft="@dimen/menu_margin"
                android:layout_marginTop="@dimen/menu_margin"
                android:singleLine="true"
                android:text="@string/notification"
                android:textColor="@color/text_menu_color"
                android:textSize="@dimen/setting_text_size"
                tools:text="NOTIFICATION" />

            <RelativeLayout
                android:id="@+id/layoutNotif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="@dimen/menu_margin"
                android:layout_marginRight="@dimen/menu_margin">

                <TextView
                    android:id="@+id/textViewPushEnable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:background="?android:selectableItemBackground"
                    android:singleLine="true"
                    android:text="@string/enable_notification"
                    android:textColor="@color/text_menu_color"
                    android:textSize="@dimen/setting_text_size" />

                <CheckBox
                    android:id="@+id/checkBoxPush"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layoutNotifSound"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="@dimen/menu_margin"
                android:layout_marginRight="@dimen/menu_margin">

                <TextView
                    android:id="@+id/textViewSound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:background="?android:selectableItemBackground"
                    android:singleLine="true"
                    android:text="@string/enable_sound"
                    android:textColor="@color/text_menu_color"
                    android:textSize="@dimen/setting_text_size" />

                <CheckBox
                    android:id="@+id/checkBoxSound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layoutNotifVib"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="@dimen/menu_margin"
                android:layout_marginRight="@dimen/menu_margin">

                <TextView
                    android:id="@+id/textViewVib"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:background="?android:selectableItemBackground"
                    android:singleLine="true"
                    android:text="@string/enable_vib"
                    android:textColor="@color/text_menu_color"
                    android:textSize="@dimen/setting_text_size" />

                <CheckBox
                    android:id="@+id/checkBoxVib"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true" />
            </RelativeLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/separator_color"
                android:orientation="vertical" />

            <TextView
                android:id="@+id/textViewOther"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:padding="@dimen/menu_margin"
                android:singleLine="true"
                android:text="@string/other"
                android:textColor="@color/text_menu_color"
                android:textSize="@dimen/setting_text_size" />


            <RelativeLayout
                android:id="@+id/layoutDLImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="@dimen/menu_margin"
                android:layout_marginRight="@dimen/menu_margin">

                <TextView
                    android:id="@+id/textViewDownloadImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:background="?android:selectableItemBackground"
                    android:singleLine="true"
                    android:text="@string/download_article_images"
                    android:textColor="@color/text_menu_color"
                    android:textSize="@dimen/setting_text_size" />

                <CheckBox
                    android:id="@+id/checkBoxDownloadImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true" />
            </RelativeLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/separator_color"
                android:orientation="vertical" />
            <TextView
                android:id="@+id/textViewAbout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:padding="@dimen/menu_margin"
                android:singleLine="true"
                android:text="@string/about"
                android:textColor="@color/text_menu_color"
                android:textSize="@dimen/setting_text_size" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/menu_margin"
                android:layout_marginLeft="@dimen/menu_margin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewAPPVersion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:text="@string/version"
                    android:textColor="@color/text_menu_color"
                    android:textSize="@dimen/setting_text_size" />

                <TextView
                    android:id="@+id/textViewAPPVValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/layout_about_margin1"
                    android:singleLine="true"
                    android:text="Medium Text"
                    android:textColor="@color/text_menu_color"
                    android:textSize="@dimen/setting_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/menu_margin"
                android:layout_marginLeft="@dimen/menu_margin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewDev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:text="@string/developer"
                    android:textColor="@color/text_menu_color"
                    android:textSize="@dimen/setting_text_size" />

                <TextView
                    android:id="@+id/textViewDevValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/layout_about_margin1"
                    android:singleLine="true"
                    android:text="@string/muriel_kamgang"
                    android:textColor="@color/text_menu_color"
                    android:textSize="@dimen/setting_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/menu_margin"
                android:layout_marginLeft="@dimen/menu_margin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewDesigner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:text="@string/designer"
                    android:textColor="@color/text_menu_color"
                    android:textSize="@dimen/setting_text_size" />

                <TextView
                    android:id="@+id/textView5DesValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/layout_about_margin1"
                    android:singleLine="true"
                    android:text="@string/sasa"
                    android:textColor="@color/text_menu_color"
                    android:textSize="@dimen/setting_text_size" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>